@@ -46,6 +46,7 @@ JAVAC = @JAVAC@
 JAVA_HOME = @JAVA_HOME@
 JAVA_PROG = @JAVA_PROG@
 JAVA_LD_PATH = @JAVA_LD_PATH@
+JAVA_LIBS = @JAVA_LIBS@
 LATEX = @LATEX@
 LDFLAGS = @LDFLAGS@
 LIBM = @LIBM@
